code/typescript/Symbology/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Symbology client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-symbology)](https://www.npmjs.com/package/@factset/sdk-symbology)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The FactSet Symbology API provides symbol resolution services, allowing clients to translate market identifiers into various symbology
types. various market symbology types such as, FactSet Permanent Identifiers, CUSIP, ISIN, 
SEDOL, Tickers, and Bloomberg FIGIs. 

Factset's Symbology API sits at the center of its hub-and-spoke data model, enabling you to quickly 
harmonize the expanding catalog of Content APIs. Translate market IDs into CUSIP, SEDOL, ISIN, Tickers as a point in time or for the entire
history of the requested id allowing Data Management workflows to normalize ids over time. Additionally, the Symbology API provides 
translation of market ids into Bloomberg FIGI.


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.0
- Package version: 0.8.6
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-symbology@0.8.6
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-symbology@0.8.6
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:


```javascript
const { ApiClient, BloombergFIGIApi } = require('@factset/sdk-symbology');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new BloombergFIGIApi();
const bloombergTranslationRequest = new symbology.BloombergTranslationRequest(); // BloombergTranslationRequest | Request Body for Bloomberg FIGIs.

// Call api endpoint
apiInstance.batchTranslateBloomberg(bloombergTranslationRequest).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*symbology.BloombergFIGIApi* | [**batchTranslateBloomberg**](docs/BloombergFIGIApi.md#batchTranslateBloomberg) | **POST** /symbology/v1/bloomberg | Translate market security symbols into Bloomberg Identifiers.
*symbology.BloombergFIGIApi* | [**translateBloomberg**](docs/BloombergFIGIApi.md#translateBloomberg) | **GET** /symbology/v1/bloomberg | Translate FactSet symbols into Bloomberg Identifiers.
*symbology.CUSIPApi* | [**batchCusipHistory**](docs/CUSIPApi.md#batchCusipHistory) | **POST** /symbology/v1/cusip-history | Retrieve the full history of CUSIP changes for the requested ID(s).
*symbology.CUSIPApi* | [**batchTranslateCusips**](docs/CUSIPApi.md#batchTranslateCusips) | **POST** /symbology/v1/cusip | Translate market security symbols into CUSIP.
*symbology.CUSIPApi* | [**cusipHistory**](docs/CUSIPApi.md#cusipHistory) | **GET** /symbology/v1/cusip-history | Retrieve the full history of CUSIP changes for the requested ID(s).
*symbology.CUSIPApi* | [**translateCusip**](docs/CUSIPApi.md#translateCusip) | **GET** /symbology/v1/cusip | Translate market security symbols into CUSIP.
*symbology.FactSetApi* | [**batchTranslateFactset**](docs/FactSetApi.md#batchTranslateFactset) | **POST** /symbology/v1/factset | Translate market security symbols into FactSet Permanent Identifiers.
*symbology.FactSetApi* | [**translateFactset**](docs/FactSetApi.md#translateFactset) | **GET** /symbology/v1/factset | Translate market security symbols into FactSet Permanent Identifiers.
*symbology.ISINApi* | [**batchIsinHistory**](docs/ISINApi.md#batchIsinHistory) | **POST** /symbology/v1/isin-history | Retrieve the full history or as of a specific date of ISIN changes for a requested ID.
*symbology.ISINApi* | [**batchTranslateIsin**](docs/ISINApi.md#batchTranslateIsin) | **POST** /symbology/v1/isin | Translate market security symbols into ISIN.
*symbology.ISINApi* | [**isinHistory**](docs/ISINApi.md#isinHistory) | **GET** /symbology/v1/isin-history | Retrieve the full history or as of a specific date of ISIN changes for the requested ID(s).
*symbology.ISINApi* | [**translateIsin**](docs/ISINApi.md#translateIsin) | **GET** /symbology/v1/isin | Translate market security symbols into ISIN.
*symbology.SEDOLApi* | [**batchSedolHistory**](docs/SEDOLApi.md#batchSedolHistory) | **POST** /symbology/v1/sedol-history | Retrieve the full history SEDOL changes for a requested ID.
*symbology.SEDOLApi* | [**batchTranslateSedol**](docs/SEDOLApi.md#batchTranslateSedol) | **POST** /symbology/v1/sedol | Translate market security symbols into SEDOL.
*symbology.SEDOLApi* | [**sedolHistory**](docs/SEDOLApi.md#sedolHistory) | **GET** /symbology/v1/sedol-history | Retrieve the full history of SEDOL changes for the requested ID(s).
*symbology.SEDOLApi* | [**translateSedol**](docs/SEDOLApi.md#translateSedol) | **GET** /symbology/v1/sedol | Translate market security symbols into SEDOL.
*symbology.TickerApi* | [**batchTickerHistory**](docs/TickerApi.md#batchTickerHistory) | **POST** /symbology/v1/ticker-history | Returns the full history of Ticker-Exchange or Ticker-Region changes for a requested security.
*symbology.TickerApi* | [**batchTranslateTicker**](docs/TickerApi.md#batchTranslateTicker) | **POST** /symbology/v1/ticker | Returns the Ticker-Exchange or Ticker-Region for a given security.
*symbology.TickerApi* | [**tickerHistory**](docs/TickerApi.md#tickerHistory) | **GET** /symbology/v1/ticker-history | Returns the full history of Ticker-Exchange or Ticker-Region changes for a requested security.
*symbology.TickerApi* | [**translateTicker**](docs/TickerApi.md#translateTicker) | **GET** /symbology/v1/ticker | Returns the Ticker-Exchange or Ticker-Region for a given security.


## Documentation for Models

 - [symbology.BloombergTranslation](docs/BloombergTranslation.md)
 - [symbology.BloombergTranslationRequest](docs/BloombergTranslationRequest.md)
 - [symbology.BloombergTranslationResponse](docs/BloombergTranslationResponse.md)
 - [symbology.CusipHistoryTranslation](docs/CusipHistoryTranslation.md)
 - [symbology.CusipHistoryTranslationRequest](docs/CusipHistoryTranslationRequest.md)
 - [symbology.CusipHistoryTranslationResponse](docs/CusipHistoryTranslationResponse.md)
 - [symbology.CusipTranslation](docs/CusipTranslation.md)
 - [symbology.CusipTranslationRequest](docs/CusipTranslationRequest.md)
 - [symbology.CusipTranslationResponse](docs/CusipTranslationResponse.md)
 - [symbology.ErrorResponse](docs/ErrorResponse.md)
 - [symbology.ErrorResponseSubErrors](docs/ErrorResponseSubErrors.md)
 - [symbology.FactsetTranslation](docs/FactsetTranslation.md)
 - [symbology.FactsetTranslationRequest](docs/FactsetTranslationRequest.md)
 - [symbology.FactsetTranslationResponse](docs/FactsetTranslationResponse.md)
 - [symbology.IsinHistoryTranslation](docs/IsinHistoryTranslation.md)
 - [symbology.IsinHistoryTranslationRequest](docs/IsinHistoryTranslationRequest.md)
 - [symbology.IsinHistoryTranslationResponse](docs/IsinHistoryTranslationResponse.md)
 - [symbology.IsinTranslation](docs/IsinTranslation.md)
 - [symbology.IsinTranslationRequest](docs/IsinTranslationRequest.md)
 - [symbology.IsinTranslationResponse](docs/IsinTranslationResponse.md)
 - [symbology.SedolHistoryTranslation](docs/SedolHistoryTranslation.md)
 - [symbology.SedolHistoryTranslationRequest](docs/SedolHistoryTranslationRequest.md)
 - [symbology.SedolHistoryTranslationResponse](docs/SedolHistoryTranslationResponse.md)
 - [symbology.SedolTranslation](docs/SedolTranslation.md)
 - [symbology.SedolTranslationRequest](docs/SedolTranslationRequest.md)
 - [symbology.SedolTranslationResponse](docs/SedolTranslationResponse.md)
 - [symbology.TickerHistoryTranslation](docs/TickerHistoryTranslation.md)
 - [symbology.TickerHistoryTranslationRequest](docs/TickerHistoryTranslationRequest.md)
 - [symbology.TickerHistoryTranslationResponse](docs/TickerHistoryTranslationResponse.md)
 - [symbology.TickerTranslation](docs/TickerTranslation.md)
 - [symbology.TickerTranslationRequest](docs/TickerTranslationRequest.md)
 - [symbology.TickerTranslationResponse](docs/TickerTranslationResponse.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
