code/typescript/Symbology/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Symbology client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v2.1.3-blue)]()
[![npm](https://img.shields.io/badge/npm-v2.0.3-orange)](https://www.npmjs.com/package/@factset/sdk-symbology/v/2.0.3)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

The FactSet Symbology API provides symbol resolution services, allowing clients to translate market identifiers into various symbology types such as, FactSet Permanent Identifiers, CUSIP, ISIN, SEDOL, Tickers, and Bloomberg FIGIs. <p>Factset's Symbology API sits at the center of its hub-and-spoke data model, enabling you to quickly harmonize the expanding catalog of Content APIs. Translate market IDs into CUSIP, SEDOL, ISIN, Tickers as of a point in time or for the entire history of the requested id allowing Data Management workflows to normalize ids over time.</p>


This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.1.3
- SDK version: 2.0.3
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-symbology@2.0.3
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-symbology@2.0.3
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, BloombergFIGIApi } = require('@factset/sdk-symbology');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new BloombergFIGIApi();
const bloombergTranslationRequest = new symbology.BloombergTranslationRequest(); // BloombergTranslationRequest | Request Body for Bloomberg FIGIs.

// Call api endpoint
apiInstance.batchTranslateBloomberg(bloombergTranslationRequest).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-symbology');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/content*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*symbology.BloombergFIGIApi* | [**batchTranslateBloomberg**](docs/BloombergFIGIApi.md#batchTranslateBloomberg) | **POST** /symbology/v2/bloomberg | Translate market security symbols into Bloomberg Identifiers.
*symbology.BloombergFIGIApi* | [**translateBloomberg**](docs/BloombergFIGIApi.md#translateBloomberg) | **GET** /symbology/v2/bloomberg | Translate market security symbols into Bloomberg Identifiers.
*symbology.CUSIPApi* | [**batchCusipHistory**](docs/CUSIPApi.md#batchCusipHistory) | **POST** /symbology/v2/cusip-history | Retrieve the full history or as of a specific date of CUSIP changes for the requested ID(s).
*symbology.CUSIPApi* | [**batchTranslateCusips**](docs/CUSIPApi.md#batchTranslateCusips) | **POST** /symbology/v2/cusip | Translate market security symbols into CUSIP - Current Only
*symbology.CUSIPApi* | [**cusipHistory**](docs/CUSIPApi.md#cusipHistory) | **GET** /symbology/v2/cusip-history | Retrieve the full history or as of a requested date of CUSIP changes for the requested ID(s).
*symbology.CUSIPApi* | [**translateCusip**](docs/CUSIPApi.md#translateCusip) | **GET** /symbology/v2/cusip | Translate market security symbols into CUSIPs - Current Only
*symbology.FactSetApi* | [**batchTranslateFactSet**](docs/FactSetApi.md#batchTranslateFactSet) | **POST** /symbology/v2/factset | Translate market security symbols into FactSet Permanent Identifiers
*symbology.FactSetApi* | [**batchTranslateFactSetAdvanced**](docs/FactSetApi.md#batchTranslateFactSetAdvanced) | **POST** /symbology/v2/factset-advanced | Translate advanced symbol types into FactSet Permanent Identifiers
*symbology.FactSetApi* | [**translateFactset**](docs/FactSetApi.md#translateFactset) | **GET** /symbology/v2/factset | Translate market security symbols into FactSet Permanent Identifiers.
*symbology.FactSetApi* | [**translateFactsetAdvanced**](docs/FactSetApi.md#translateFactsetAdvanced) | **GET** /symbology/v2/factset-advanced | Translate advanced symbol types into FactSet Permanent Identifiers
*symbology.ISINApi* | [**batchIsinHistory**](docs/ISINApi.md#batchIsinHistory) | **POST** /symbology/v2/isin-history | Translate Market IDs into ISINS as of a specific date or receive the full history of changes.
*symbology.ISINApi* | [**batchTranslateIsin**](docs/ISINApi.md#batchTranslateIsin) | **POST** /symbology/v2/isin | Translate market security symbols into ISIN. - Current Only
*symbology.ISINApi* | [**isinHistory**](docs/ISINApi.md#isinHistory) | **GET** /symbology/v2/isin-history | Translate Market IDs into ISINS as of a specific date or receive the full history of changes.
*symbology.ISINApi* | [**translateIsin**](docs/ISINApi.md#translateIsin) | **GET** /symbology/v2/isin | Translate market security symbols into ISIN. - Current Only
*symbology.SEDOLApi* | [**batchSedolHistory**](docs/SEDOLApi.md#batchSedolHistory) | **POST** /symbology/v2/sedol-history | Retrieve the full history or as of a specific date of SEDOL changes for a requested ID.
*symbology.SEDOLApi* | [**batchTranslateSedol**](docs/SEDOLApi.md#batchTranslateSedol) | **POST** /symbology/v2/sedol | Translate market security symbols into SEDOL. - Current Only
*symbology.SEDOLApi* | [**sedolHistory**](docs/SEDOLApi.md#sedolHistory) | **GET** /symbology/v2/sedol-history | Retrieve the full history or as of a specific date of SEDOL changes for the requested ID(s).
*symbology.SEDOLApi* | [**translateSedol**](docs/SEDOLApi.md#translateSedol) | **GET** /symbology/v2/sedol | Translate market security symbols into SEDOL. - Current Only
*symbology.TickerApi* | [**batchTickerHistory**](docs/TickerApi.md#batchTickerHistory) | **POST** /symbology/v2/ticker-history | Returns the full history of Ticker-Exchange or Ticker-Region changes for a requested security.
*symbology.TickerApi* | [**batchTranslateTicker**](docs/TickerApi.md#batchTranslateTicker) | **POST** /symbology/v2/ticker | Returns the Ticker-Exchange or Ticker-Region for a given security.
*symbology.TickerApi* | [**tickerHistory**](docs/TickerApi.md#tickerHistory) | **GET** /symbology/v2/ticker-history | Returns the full history of Ticker-Exchange or Ticker-Region changes for a requested security.
*symbology.TickerApi* | [**translateTicker**](docs/TickerApi.md#translateTicker) | **GET** /symbology/v2/ticker | Returns the Ticker-Exchange or Ticker-Region for a given security. - Current Only


## Documentation for Models

 - [symbology.BloombergTranslation](docs/BloombergTranslation.md)
 - [symbology.BloombergTranslationRequest](docs/BloombergTranslationRequest.md)
 - [symbology.BloombergTranslationResponse](docs/BloombergTranslationResponse.md)
 - [symbology.CusipHistoryResponse](docs/CusipHistoryResponse.md)
 - [symbology.CusipHistoryTranslation](docs/CusipHistoryTranslation.md)
 - [symbology.CusipHistoryTranslationRequest](docs/CusipHistoryTranslationRequest.md)
 - [symbology.CusipTranslation](docs/CusipTranslation.md)
 - [symbology.CusipTranslationRequest](docs/CusipTranslationRequest.md)
 - [symbology.CusipTranslationResponse](docs/CusipTranslationResponse.md)
 - [symbology.ErrorResponse](docs/ErrorResponse.md)
 - [symbology.ErrorResponseSubErrors](docs/ErrorResponseSubErrors.md)
 - [symbology.FactsetTranslation](docs/FactsetTranslation.md)
 - [symbology.FactsetTranslationAdvanced](docs/FactsetTranslationAdvanced.md)
 - [symbology.FactsetTranslationAdvancedRequest](docs/FactsetTranslationAdvancedRequest.md)
 - [symbology.FactsetTranslationAdvancedResponse](docs/FactsetTranslationAdvancedResponse.md)
 - [symbology.FactsetTranslationRequest](docs/FactsetTranslationRequest.md)
 - [symbology.FactsetTranslationResponse](docs/FactsetTranslationResponse.md)
 - [symbology.GetSymbolType](docs/GetSymbolType.md)
 - [symbology.IsinHistoryTranslation](docs/IsinHistoryTranslation.md)
 - [symbology.IsinHistoryTranslationRequest](docs/IsinHistoryTranslationRequest.md)
 - [symbology.IsinHistoryTranslationResponse](docs/IsinHistoryTranslationResponse.md)
 - [symbology.IsinTranslation](docs/IsinTranslation.md)
 - [symbology.IsinTranslationRequest](docs/IsinTranslationRequest.md)
 - [symbology.IsinTranslationResponse](docs/IsinTranslationResponse.md)
 - [symbology.SedolHistoryTranslation](docs/SedolHistoryTranslation.md)
 - [symbology.SedolHistoryTranslationRequest](docs/SedolHistoryTranslationRequest.md)
 - [symbology.SedolHistoryTranslationResponse](docs/SedolHistoryTranslationResponse.md)
 - [symbology.SedolTranslation](docs/SedolTranslation.md)
 - [symbology.SedolTranslationRequest](docs/SedolTranslationRequest.md)
 - [symbology.SedolTranslationResponse](docs/SedolTranslationResponse.md)
 - [symbology.TickerHistoryTranslation](docs/TickerHistoryTranslation.md)
 - [symbology.TickerHistoryTranslationRequest](docs/TickerHistoryTranslationRequest.md)
 - [symbology.TickerHistoryTranslationResponse](docs/TickerHistoryTranslationResponse.md)
 - [symbology.TickerTranslation](docs/TickerTranslation.md)
 - [symbology.TickerTranslationRequest](docs/TickerTranslationRequest.md)
 - [symbology.TickerTranslationResponse](docs/TickerTranslationResponse.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
